--- a/app/views/dst_questionarios/index.html.erb
+++ b/app/views/dst_questionarios/index.html.erb
@@ -1,3 +1,4 @@
+<h1 class="center-align">Questionários</h1> 
 <div class="card">  
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
@@ -15,8 +16,8 @@
 <table class="card striped responsive-table">
   <thead>
     <tr>
-            <th>Titulo</th>
-            <th>Descricao</th>
+            <th>Título</th>
+            <th>Descrição</th>
             <th>Ativo</th>
           </tr>
   </thead>
@@ -33,7 +34,7 @@
         
               
 
-          <td><%= dst_questionario.ativo %></td>
+          <td><%= dst_questionario.ativo == true ? "SIM" : "NÃO" %></td>
         
           </tr>
     <% end %>
