--- a/app/views/dst_produtos/_form.html.erb
+++ b/app/views/dst_produtos/_form.html.erb
@@ -33,6 +33,13 @@
     
   </div>
 
+  <div class="input-field">
+
+    <%= f.check_box :status %>
+    <%= f.label :status, "Ativo" %>
+
+  </div>
+
 </div>
   <div class="actions">
     <%= f.submit "Salvar", class:"btn" %>
