--- a/app/views/dst_produtos/show.html.erb
+++ b/app/views/dst_produtos/show.html.erb
@@ -6,32 +6,20 @@
 </p>
 
 <p>
-  <strong>Descricao:</strong>
+  <strong>Descrição:</strong>
   <%= @dst_produto.descricao %>
 </p>
 
 <p>
-  <strong>Unidade medida:</strong>
+  <strong>Unidade de medida:</strong>
   <%= @dst_produto.unidade_medida %>
 </p>
 
-</div>
-<div class="card-panel">
-  <h4 class="header2">Estoque</h4>
-  <table class="striped">
-    <thead>
-    <th>Local</th>
-    <th>Quantidade</th>
-    </thead>
+<p>
+  <strong>Ativo:</strong>
+  <%= @dst_produto.status == true ? "SIM" : "NÃO" %>
+</p>
 
-    <tbody>
-    <% @dst_locals.each do |p| %>
-        <tr>
-          <td><%= p[0] %></td>
-          <td><%= p[1] %></td>
-        </tr>
-    <% end %>
-    </tbody>
-  </table>
 </div>
+
 <%= link_to 'Voltar', dst_produtos_path, class:"btn" %>
