nome do sistema

--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -14,7 +14,7 @@
           </li>
         </ul>
         <div class="header-search-wrapper hide-on-med-and-down">
-          Sistema de Gestão
+        SIVATT - Sistema de Informação de Vigilância de Agravos Transmissíveis e Não Transmissíveis
         </div>
         <ul class="right hide-on-med-and-down no-print">
           <%= yield :icon_top  %>
