--- a/app/views/dant_pacients/show.html.erb
+++ b/app/views/dant_pacients/show.html.erb
@@ -57,6 +57,12 @@
         <%= @dant_pacient.cpf %>
       </p>
     </div>
+    <div class="col s12 l3">
+      <p>
+        <strong>Cartão SUS:</strong>
+        <%= @dant_pacient.cartao_sus %>
+      </p>
+    </div>
   </div>
 
   <div class="row">
