--- a/app/views/dst_solicitacao_produtos/show.html.erb
+++ b/app/views/dst_solicitacao_produtos/show.html.erb
@@ -51,4 +51,4 @@
     </div>
 <% end %>
 
-<%= link_to 'Voltar', dst_solicitacao_produtos_path, class:"btn" %>
+<%= link_to 'Voltar', @dst_solicitacao_produto.dst_solicitacao, class:"btn" %>
