--- a/app/views/layouts/_left_sidebar_dst.html.erb
+++ b/app/views/layouts/_left_sidebar_dst.html.erb
@@ -54,8 +54,8 @@
           </li>
 
             <li class="bold">
-              <a href="/dst/dst_solicitacao_produtos" class="waves-effect waves-cyan">
-                <i class="material-icons">assignment_turned_in</i> Analises
+              <a href="/dst/dst_solicitacaos/mapa" class="waves-effect waves-cyan">
+                <i class="material-icons">assignment_turned_in</i> Mapa de Controle
               </a>
             </li>
         <% end %>
