--- a/app/views/layouts/_left_sidebar_dst.html.erb
+++ b/app/views/layouts/_left_sidebar_dst.html.erb
@@ -54,7 +54,7 @@
           </li>
 
             <li class="bold">
-              <a href="/dst/dst_solicitacaos/mapa" class="waves-effect waves-cyan">
+              <a href="/dst/dst_solicitacaos/mapa?dst_solicitacaos_ano_eq=<%= Date.today.year %>" class="waves-effect waves-cyan">
                 <i class="material-icons">assignment_turned_in</i> Mapa de Controle
               </a>
             </li>
