--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -384,6 +384,7 @@ Scripts
   $(".chosen-select").chosen();
   $(document).ready(function(){
       $('.select2').select2();
+      $('.modal').modal();
   });
 
   $('.datetimepicker').datetimepicker({
