--- a/app/views/dst_solicitacaos/index.html.erb
+++ b/app/views/dst_solicitacaos/index.html.erb
@@ -59,4 +59,4 @@
   <%= paginate(@dst_solicitacaos)  %>
 </div>
 
-<%= link_to '+ Cadastrar', new_dst_solicitacao_path, class:"btn" %>
+<%= link_to '+ Solicitar', new_dst_solicitacao_path, class:"btn" %>
