--- a/app/views/imunizacao_solicitacaos/show.html.erb
+++ b/app/views/imunizacao_solicitacaos/show.html.erb
@@ -109,18 +109,15 @@
 </div>
 
 <div class="card-panel">
-  <h4 class="header2"><b>Motivo da Solicitação</b></h4>
-  <%= @imunizacao_solicitacao.motivo_solicitacao %> <br>
+  <h4 class="header2"><b>Solicitante</b></h4>
+  <%#= @imunizacao_solicitacao.motivo_solicitacao %>
   <div class="input-field">
-
-    <b>Solicitante:</b><br>
     <%= @imunizacao_solicitacao.solicitante %>
-
   </div>
-  <p><b>Anexos</b></p>
-  <% @imunizacao_solicitacao.anexos.each do |a| %>
-    <%= link_to a.url.split("/").last, a.url  %> <br>
-  <% end %>
+<!--  <p><b>Anexos</b></p>-->
+  <%# @imunizacao_solicitacao.anexos.each do |a| %>
+<!--    <%#= link_to a.url.split("/").last, a.url  %> <br>-->
+  <%# end %>
 </div>
 <div class="card-panel" style="overflow: visible;">
   <h4 class="header2">Imunobiológicos Fornecidos pelo Estado</h4>
@@ -166,6 +163,14 @@
                     </div>
                 <% end %>
               </div>
+              <% if current_user.admin_imuni? || current_user.administrador? %>
+                <div class="row">
+                  <div class="col s12">
+                    <b>Lote distribuído:</b><br>
+                    <%= esquema.lote %>
+                  </div>
+                </div>
+              <% end %>
               <p><b>Encerramentos:</b></p>
               <% esquema.imunizacao_encerramentos.each do |encerramento| %>
                   <div class="card-panel">
@@ -281,15 +286,23 @@
 
                   <div class="card-panel" style="overflow: visible;">
                     <div class="row">
-                    <div class="col s12 m4">
-                      <%= label_tag :dose %>
-                      <%= select_tag :dose, options_for_select(ImunizacaoEsquema.dose.options) %>
-                    </div>
-                    <div class="col s12 m4">
-                      <%= label_tag :esquema %>
-                      <%= text_area_tag :esquema %>
-                    </div>
+                      <div class="col s12 l4">
+                        <%= label_tag :dose %>
+                        <%= select_tag :dose, options_for_select(ImunizacaoEsquema.dose.options) %>
+                      </div>
+                      <div class="col s12 l8">
+                        <%= label_tag :esquema %>
+                        <%= text_area_tag :esquema%>
+                      </div>
                   </div>
+                    <% if current_user.admin_imuni? || current_user.administrador? %>
+                      <div class="row">
+                        <div class="col s12 m4">
+                          <%= label_tag :lote %>
+                          <%= text_field_tag :lote %>
+                        </div>
+                      </div>
+                    <% end %>
                 </div>
                 <%= submit_tag "Salvar", class:"btn" %>
             <% end %>
@@ -314,37 +327,37 @@
   <% end %>
 </div>
 
-<div class="card-panel">
-  <h4 class="header2">Outros Imunobiológicos</h4>
-  <table class="table striped">
-    <% @imunizacao_solicitacao.outros_imunobiologicos.each do |outros| %>
-        <tr>
-          <td><%= outros %></td>
-          <td>
-            <% if outros.justificativa_indeferimento == nil %>
-                <a class="waves-effect waves-light btn red modal-trigger" href="#modal_resposta_<%= outros.id %>">Resposta</a>
-            <% else %>
-                <%= outros.justificativa_indeferimento %>
-            <% end %>
-          </td>
-        </tr>
-        <div id="modal_resposta_<%= outros.id %>" class="modal">
-          <div class="modal-content">
-            <%= form_tag(indeferir_imunizacao_imunobiologico_path(outros), method: :get) do %>
-                <h4>Resposta</h4>
-                <div class="row">
-                  <div class="col s12 m4">
-                    <%= label_tag :motivo, "Informe a Resposta" %>
-                    <%= text_area_tag :motivo,nil,required: true %>
-                  </div>
-                </div>
-                <%= submit_tag "Salvar", class:"btn" %>
-            <% end %>
-          </div>
-        </div>
-    <% end %>
-  </table>
-</div>
+<!--<div class="card-panel">-->
+<!--  <h4 class="header2">Outros Imunobiológicos</h4>-->
+<!--  <table class="table striped">-->
+    <%# @imunizacao_solicitacao.outros_imunobiologicos.each do |outros| %>
+<!--        <tr>-->
+<!--          <td><%#= outros %></td>-->
+<!--          <td>-->
+            <%# if outros.justificativa_indeferimento == nil %>
+<!--                <a class="waves-effect waves-light btn red modal-trigger" href="#modal_resposta_<%#= outros.id %>">Resposta</a>-->
+            <%# else %>
+                <%#= outros.justificativa_indeferimento %>
+            <%# end %>
+<!--          </td>-->
+<!--        </tr>-->
+<!--        <div id="modal_resposta_<%#= outros.id %>" class="modal">-->
+<!--          <div class="modal-content">-->
+            <%#= form_tag(indeferir_imunizacao_imunobiologico_path(outros), method: :get) do %>
+<!--                <h4>Resposta</h4>-->
+<!--                <div class="row">-->
+<!--                  <div class="col s12 m4">-->
+                    <%#= label_tag :motivo, "Informe a Resposta" %>
+                    <%#= text_area_tag :motivo,nil,required: true %>
+<!--                  </div>-->
+<!--                </div>-->
+                <%#= submit_tag "Salvar", class:"btn" %>
+            <%# end %>
+<!--          </div>-->
+<!--        </div>-->
+    <%# end %>
+<!--  </table>-->
+<!--</div>-->
 
 <div class="card-panel">
   <h4 class="header2">Anexos</h4>
