--- a/app/views/imunizacao_solicitacaos/_form.html.erb
+++ b/app/views/imunizacao_solicitacaos/_form.html.erb
@@ -32,7 +32,7 @@
         <div class="col s12 m6">
           <div class="">
             <%= f.label :sexo %>
-            <%= f.select :sexo, ImunizacaoSolicitacao.sexo.options, class:"browser-default" %>
+            <%= f.select :sexo, ImunizacaoSolicitacao.sexo.options,{},{ class:"browser-default" }%>
           </div>
         </div>
         <div class="col s12 m6">
