--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,7 @@
 
 
   <!-- CORE CSS-->
-<!--  <link href="/materialize/dist/css/materialize.css" type="text/css" rel="stylesheet" >-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href="/materialize/dist/css/materialize.css" type="text/css" rel="stylesheet" >
   <link href="/materialize/dist/css/style.css" type="text/css" rel="stylesheet" >
   <!-- Custome CSS-->
   <link href="/materialize/dist/css/custom/custom.min.css" type="text/css" rel="stylesheet" media="screen,projection">
