--- a/app/views/imunizacao_solicitacaos/_form.html.erb
+++ b/app/views/imunizacao_solicitacaos/_form.html.erb
@@ -21,7 +21,7 @@
 
       </div>
       <div class="row">
-        <div class="col s12 m6">
+        <div class="col s12 l6">
           <div class="">
 
             <%= f.label :data_nascimento %>
@@ -29,13 +29,13 @@
 
           </div>
         </div>
-        <div class="col s12 m6">
+        <div class="col s12 l6">
           <div class="">
             <%= f.label :sexo %>
             <%= f.select :sexo, ImunizacaoSolicitacao.sexo.options,{},{ class:"browser-default" }%>
           </div>
         </div>
-        <div class="col s12 m6">
+        <div class="col s12 l6">
           <div class="">
             <%= f.label :telefone_paciente, "Telefone" %>
             <%= f.text_field :telefone_paciente %>
