--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,7 @@
   <meta name="description" content="Junte seus pontos">
   <title>SIVATT</title>
   <link href="https://fonts.googleapis.com/css?family=Kavivanar" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="/js/idletimer/dist/idle-timer.min.js"></script>
+
 
 
   <!-- CORE CSS-->
@@ -37,19 +36,7 @@
   <link rel="stylesheet" href="/jquery_calendar/css/eventCalendar_theme_responsive.css">
   <%= yield :firebase %>
   <!--Angular -->
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
-  <script type="text/javascript" src="https://code.angularjs.org/1.6.2/angular-animate.js"></script>
-  <script type="text/javascript" src="https://code.angularjs.org/1.6.2/angular-sanitize.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-aria.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-messages.min.js"></script>
-  <script src="/js/angular-viacep.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-hotkeys/1.7.0/hotkeys.js"></script>
-  <script type="text/javascript" src="/js/simple-web-notification/web-notification.js"></script>
-  <script type="text/javascript" src="/js/angular-web-notification/angular-web-notification.js"></script>
 
-  <!-- Angular Material Library -->
-  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.16/angular-filter.min.js"></script>
 
   <!-- INCLUDED PLUGIN CSS ON THIS PAGE -->
   <link href="/materialize/dist/js/plugins/prism/prism.css" type="text/css" rel="stylesheet" media="screen,projection">
@@ -75,7 +62,7 @@
   <%= yield :important_script  %>
 
   <%= csrf_meta_tags %>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.0.10/sweetalert2.min.js"></script>
+
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.0.10/sweetalert2.min.css">
   <link rel="stylesheet" href="/chosen/chosen.min.css">
   <script type="text/javascript">
@@ -292,12 +279,31 @@
 <!-- ================================================
 Scripts
 ==========================r====================== -->
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/idletimer/dist/idle-timer.min.js"></script>
 <!-- jQuery Library -->
-<!--materialize js-->
 
-<!--<script type="text/javascript" src="/materialize/dist/js/materialize.js"></script>-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+
+<!-- ANGULAR -->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
+<script type="text/javascript" src="https://code.angularjs.org/1.6.2/angular-animate.js"></script>
+<script type="text/javascript" src="https://code.angularjs.org/1.6.2/angular-sanitize.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-aria.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-messages.min.js"></script>
+<script src="/js/angular-viacep.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-hotkeys/1.7.0/hotkeys.js"></script>
+<script type="text/javascript" src="/js/simple-web-notification/web-notification.js"></script>
+<script type="text/javascript" src="/js/angular-web-notification/angular-web-notification.js"></script>
+
+<!-- Angular Material Library -->
+<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.16/angular-filter.min.js"></script>
+
+
+<!--materialize js-->
+<script type="text/javascript" src="/materialize/dist/js/materialize.min.js"></script>
+<%# <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> %>
 <!--scrollbar-->
 <script type="text/javascript" src="/materialize/dist/js/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 <!--prism-->
@@ -323,7 +329,7 @@ Scripts
 
 
 <!--plugins.js - Some Specific JS codes for Plugin Settings-->
-<!--<script type="text/javascript" src="/materialize/dist/js/plugins.js"></script>-->
+<script type="text/javascript" src="/materialize/dist/js/plugins.js"></script>
 <script type="text/javascript" src="/chosen/chosen.jquery.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/2.1.0/jquery.imagesloaded.min.js"></script>
 <script src="/imagefill/js/jquery-imagefill.js"></script>
@@ -331,6 +337,14 @@ Scripts
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=57ds9k02vjomihwdw5hh0zmvee7tplju9jj9ydv5urhk2lbn"></script>
 <script src="/js/datetimepicker-master/build/jquery.datetimepicker.full.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.0.10/sweetalert2.min.js"></script>
+
+<script type="text/javascript" src="/materialize/dist/js/plugins/fullcalendar/lib/jquery-ui.custom.min.js"></script>
+<script type="text/javascript" src="/materialize/dist/js/plugins/fullcalendar/lib/moment.min.js"></script>
+<script type="text/javascript" src="/materialize/dist/js/plugins/fullcalendar/js/fullcalendar.min.js"></script>
+<script type="text/javascript" src="/materialize/dist/js/plugins/fullcalendar/js/lang-all.js"></script>
+<script src="/jquery_calendar/js/moment.js" type="text/javascript"></script>
+<script src="/jquery_calendar/js/jquery.eventCalendar.min.js" type="text/javascript"></script>
 
 <!-- Toast Notification -->
 <% if flash[:notice].present? %>
@@ -414,12 +428,7 @@ Scripts
 <script type="text/javascript">
   $('.image-fill').imagefill();
 </script>
-<script type="text/javascript" src="/materialize/dist/js/plugins/fullcalendar/lib/jquery-ui.custom.min.js"></script>
-<script type="text/javascript" src="/materialize/dist/js/plugins/fullcalendar/lib/moment.min.js"></script>
-<script type="text/javascript" src="/materialize/dist/js/plugins/fullcalendar/js/fullcalendar.min.js"></script>
-<script type="text/javascript" src="/materialize/dist/js/plugins/fullcalendar/js/lang-all.js"></script>
-<script src="/jquery_calendar/js/moment.js" type="text/javascript"></script>
-<script src="/jquery_calendar/js/jquery.eventCalendar.min.js" type="text/javascript"></script>
+
 
 <script>tinymce.init({
   selector:'.html-editor',
